src/test/ui/operator-recovery/arithmetic-left-shift.rs
fn main() {
    println!("{}", 1 <<< 2);
    //~^ERROR invalid shift operator `<<<`
}
